# algohive/backend/models/APIEnvironment.go
@@ -1,9 +1,9 @@
 package models
 
 type APIEnvironment struct {
-    ID     string     `gorm:"type:uuid;default:gen_random_uuid();primary_key"`
-    Address string    `gorm:"type:varchar(255);not null"`
-    Name    string    `gorm:"type:varchar(100);unique;not null"`
-    Description string `gorm:"type:varchar(255);not null"`
-    Scopes  []*Scope   `gorm:"many2many:scope_api_environments;"`
+    ID          string  `gorm:"type:uuid;default:gen_random_uuid();primary_key" json:"id"`
+    Address     string  `gorm:"type:varchar(255);not null" json:"address"`
+    Name        string  `gorm:"type:varchar(100);unique;not null" json:"name"`
+    Description string  `gorm:"type:varchar(255);not null" json:"description"`
+    Scopes      []*Scope `gorm:"many2many:scope_api_environments;" json:"scopes"`
 }
